--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       // ตัวอย่าง: "https://xxxx-xxxx.ngrok-free.app/send-service-message"
       const API_URL = "https://ec9578fac5d7.ngrok-free.app/send-service-message"; 
       
-      const MY_LIFF_ID = "2000535610-nEkZrbmA";
+      const MY_LIFF_ID = "2008633161-eGaNMELY";
 
       async function main() {
         const statusDiv = document.getElementById("status");
