--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       // ตัวอย่าง: "https://xxxx-xxxx.ngrok-free.app/send-service-message"
       const API_URL = "https://b7430ec8945d.ngrok-free.app/send-service-message"; 
       
-      const MY_LIFF_ID = "2008633161-eGaNMELY";
+      const MY_LIFF_ID = "2008633163-Pwzd6l5K";
 
       async function main() {
         const statusDiv = document.getElementById("status");
